End of Section 12

--- a/DatingApp/src/app/members/member-card/member-card.component.css
+++ b/DatingApp/src/app/members/member-card/member-card.component.css
@@ -11,6 +11,11 @@
     transition-timing-function: ease-out;
 }
 
+.card-img-top {
+    height: 140px;
+    width: 135px;
+}
+
 .card-img-wrapper {
     overflow: hidden;
     position: relative;
