--- a/DatingApp/src/app/members/member-card/member-card.component.html
+++ b/DatingApp/src/app/members/member-card/member-card.component.html
@@ -7,7 +7,7 @@
           <i class="fa fa-user"></i>
         </button>
       </li>
-      <li class="list-inline-item">
+      <li class="list-inline-item" (click)="sendLike(user.id)">
         <button class="btn btn-primary">
           <i class="fa fa-heart"></i>
         </button>
