--- a/DatingApp/src/app/nav/nav.component.html
+++ b/DatingApp/src/app/nav/nav.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" href="#" [routerLink]="['/messages']">Messages</a>
       </li>
+      <li *appHasRole="['Admin', 'Moderator']" class="nav-item" routerLinkActive="active">
+        <a class="nav-link" href="#" [routerLink]="['/admin']">Admin</a>
+      </li>
     </ul>
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <span class="mr-1">
